--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "^1.0.16",
+    "redux": "^3.7.2",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
