--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run chat\"",
-    "start-chat-prod": "react-scripts start",
+    "start-chat-prod": "npm run chat",
     "start-server-prod": "node src/server/server.js",
     "chat": "react-scripts start",
     "server": "nodemon ./src/server/server.js",
