--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactchat",
   "version": "1.0.0",
-  "description": "A chat app made with React, socket.io and MongoDB",
+  "description": "A chat app made with React, socket.io and NodeJs",
   "main": "index.js",
   "scripts": {
     "start": "node src/server/server.js",
